Fix height issue showing whitespace at bottom

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -3,7 +3,7 @@
 .signup {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .form-sidebar {
