--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ button {
 .signup {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .form-sidebar {
